--- a/comment_skin.html
+++ b/comment_skin.html
@@ -54,7 +54,7 @@
                     カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
                     
                     <div id="tea_image" class="center">
-                        <img src="rosehip.png" alt="ローズヒップティーの写真" title="ローズヒップティー" width="400" height="300">
+                        <img src="rosehip.jpg" alt="ローズヒップティーの写真" title="ローズヒップティー" width="400" height="300">
                     </div>
             
             <div id= "btn_ok" class="of_course">OK</div>
