--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="greentea_can" class="result core">           <p>緑茶です！</p><br></div>
                 <div class="start">
-                    <a href="./comment_cancer.html">もっと詳しく</a>
+                    <a href="./comment_cancer.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
@@ -390,7 +390,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="oolong" class="result core">           <p>ウーロン茶です！</p><br></div>
                 <div class="start">
-                    <a href="./comment_stomach.html">もっと詳しく</a>
+                    <a href="./comment_stomach.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
@@ -402,7 +402,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="blacktea" class="result core">           <p>紅茶です！</p><br></div>
                 <div class="start">
-                    <a href="./comment_flu.html">もっと詳しく</a>
+                    <a href="./comment_flu.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
@@ -410,7 +410,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="roasted" class="result core">           <p>ほうじ茶です！</p><br></div>
                 <div class="start">
-                    <a href="./comment_tooth.html">もっと詳しく</a>
+                    <a href="./comment_tooth.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
@@ -418,7 +418,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="greentea_diabete" class="result core">           <p>緑茶です！</p><br></div>
                 <div class="start">
-                    <a href="./comment_diabete.html">もっと詳しく</a>
+                    <a href="./comment_diabete.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
@@ -432,7 +432,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="redbush" class="result core">           <p>ルイボスティーです！</p><br></div>
                 <div class="start">
-                    <a href="./comment_aa.html">もっと詳しく</a>
+                    <a href="./comment_aa.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
@@ -440,7 +440,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="rose" class="result core">           <p>ローズヒップティーです！</p><br></div>
                 <div class="start">
-                    <a href="./comment_skin.html">もっと詳しく</a>
+                    <a href="./comment_skin.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
@@ -448,7 +448,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="hibiscus" class="result core">           <p>ハイビスカスティーです！</p><br></div>
                 <div class="start">
-                    <a href="./comment_swell.html">もっと詳しく</a>
+                    <a href="./comment_swell.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
@@ -459,7 +459,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="herb" class="result core">           <p>ハーブティーです！</p><br></div>
                 <div class="start">
-                    <a href="./comment_hair.html">もっと詳しく</a>
+                    <a href="./comment_hair.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
@@ -467,7 +467,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="oolong_diet" class="result core">           <p>ウーロン茶です！</p><br></div>
                 <div class="start">
-                    <a href="./comment_diet.html">もっと詳しく</a>
+                    <a href="./comment_diet.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
@@ -475,7 +475,7 @@
             <p>今日のティータイムにおすすめなお茶は...</p>
             <div id="greentea_white" class="result core">           <p>緑茶です！</p><br></div>
                 <div class="start">
-                    <a href="./comment_whitening.html">もっと詳しく</a>
+                    <a href="./comment_whitening.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
         </div>
 
