--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>教えて！薬剤TEAさん</title>
         <meta name="description" content="薬剤TEAさんがお茶で美容と健康のお悩み解決。">
         <meta name="keywords" content="美容,健康,薬剤TEAさん,診断,レコメンド">
-        <meta name="viewport" content="width=380" >
+        <meta name="viewport" content="width=device-width, initial-scale=1" >
         <link rel="stylesheet" href="haruhi.css">
         <link rel="stylesheet" href="yuzuki.css">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
