--- a/index.html
+++ b/index.html
@@ -262,7 +262,13 @@
             border: 5px solid;
             padding: 20px;
             }
-            
+        @media (max-width : 670px){
+            div.imgt {
+            width:100%;
+            height:auto;
+            right:15%
+            }
+        }
         p.title {
             font-family: 'Arial Black','ヒラギノ角ゴシック','Hiragino Sans','メイリオ', Meiryo,'ヒラギノ角ゴ StdN','Hiragino Kaku Gothic StdN',sans-serif;
             color: #000080;
