--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
             }
         @media (max-width : 670px){
             div.imgt {
-            width:100%;
-            height:auto;
-            right:15%
-            }
-        }
+                width:100%;
+                height:auto;
+                right:15%
+             }
+         }
         p.title {
             font-family: 'Arial Black','ヒラギノ角ゴシック','Hiragino Sans','メイリオ', Meiryo,'ヒラギノ角ゴ StdN','Hiragino Kaku Gothic StdN',sans-serif;
             color: #000080;
@@ -276,6 +276,13 @@
             line-height:90%;
              margin: 10px;
             }
+         @media (max-width : 670px){
+             p.title {
+                 width:100%;
+                 height:auto;
+                 right:15%
+             }
+          }
         </style>
         
 
