--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>教えて！薬剤TEAさん</title>
         <meta name="description" content="薬剤TEAさんがお茶で美容と健康のお悩み解決。">
         <meta name="keywords" content="美容,健康,薬剤TEAさん,診断,レコメンド">
-        <meta name="viewport" content="width=device-width, initial-scale=1" >
+        <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0">
+
         <link rel="stylesheet" href="haruhi.css">
         <link rel="stylesheet" href="yuzuki.css">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -262,7 +263,7 @@
             border: 5px solid;
             padding: 20px;
             }
-        @media (max-width : 670px){
+        @media (max-width : 479px){
             div.imgt {
                 width:100%;
                 height:auto;
@@ -276,7 +277,7 @@
             line-height:90%;
              margin: 10px;
             }
-         @media (max-width : 670px){
+         @media (max-width : 479px){
              p.title {
                  width:100%;
                  height:auto;
