--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
             div.imgt {
                 width:100%;
                 height:auto;
-                right:15%
+                margin-left:auto;
+                margin-right:auto;
              }
          }
         p.title {
@@ -281,7 +282,8 @@
              p.title {
                  width:100%;
                  height:auto;
-                 right:15%
+                 margin-left:auto;
+                 margin-right:auto;
              }
           }
         </style>
