--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@
             left:8em;
             border: 5px solid;
             padding: 20px;
+            overflow: hidden;          
+            
             }
         @media (max-width : 479px){
             div.imgt {
@@ -269,6 +271,7 @@
                 height:auto;
                 margin-left:auto;
                 margin-right:auto;
+                -webkit-text-size-adjust: 100%;
              }
          }
         p.title {
@@ -277,6 +280,7 @@
             font-size:5em;
             line-height:90%;
              margin: 10px;
+             overflow: hidden; 
             }
          @media (max-width : 479px){
              p.title {
@@ -284,6 +288,7 @@
                  height:auto;
                  margin-left:auto;
                  margin-right:auto;
+                 -webkit-text-size-adjust: 100%;
              }
           }
         </style>
