--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
                 margin-left:auto;
                 margin-right:auto;
                 -webkit-text-size-adjust: 100%;
+                max-width:100%;
              }
          }
         p.title {
@@ -289,6 +290,7 @@
                  margin-left:auto;
                  margin-right:auto;
                  -webkit-text-size-adjust: 100%;
+                 max-width:100%;
              }
           }
         </style>
