--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
                  margin-right:auto;
                  -webkit-text-size-adjust: 100%;
                  max-width:100%;
+                 font-size:10px;
              }
           }
         </style>
