--- a/comment_hbp.html
+++ b/comment_hbp.html
@@ -49,10 +49,9 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> 高血圧についての説明文：緑茶中の有効成分カテキンは、がん患者さんの栄養療法において評価されていて、がんの発生や成長の抑制メカニズムに効果を発揮してくれます。
-
-                    カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
-                    
+                <p> 緑茶に含まれるカテキン、テアニン、GABAには、平滑筋収縮の緩和作用や、血管の炎症修復作用、抗酸化ストレス作用など様々な働きを持っていて、血圧を下げる効果があると考えられています。テアニンにはリラックス効果もあるんですよ！他にも、緑茶に含まれるポリフェノール酸には、強い抗酸化作用があるので、血管の老化を防いだり、
+                    血管を詰まらせる原因になる悪玉コレステロールを減らしたりする効果が期待できます。他には、強い抗酸化作用があるルイボスティーも血圧を下げる効果があるのでおすすめです♪</p>
+                
                     <div id="tea_image" class="center">
                         <img src="greentea.jpg" alt="緑茶の写真" title="緑茶" width="400" height="300">
                     </div>
