--- a/comment_cancer.html
+++ b/comment_cancer.html
@@ -49,9 +49,8 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> がんの説明：緑茶中の有効成分カテキンは、がん患者さんの栄養療法において評価されていて、がんの発生や成長の抑制メカニズムに効果を発揮してくれます。
-
-                    カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
+                <p> がんによる死亡率が圧倒的に低い地域をご存知ですか？静岡県掛川市です。これは、静岡県には日常的にお茶を飲む習慣があるからなんです。緑茶に含まれるカテキンには、がんの予防効果があるとされています。また、紅茶よりもビタミンCが多いので、胃がんにも効果的
+                    と言われています。焼く工程があるほうじ茶にするよりも、番茶や煎茶の方が茶成分が残りやすいので、おすすめの飲み方です。/p>
                     
                     <div id="tea_image" class="center">
                         <img src="greentea.jpg" alt="緑茶の写真" title="緑茶" width="400" height="300">
