--- a/comment_cancer.html
+++ b/comment_cancer.html
@@ -50,7 +50,7 @@
         <div id= "advice" class="check health">
             <div class="comment">
                 <p> がんによる死亡率が圧倒的に低い地域をご存知ですか？静岡県掛川市です。これは、静岡県には日常的にお茶を飲む習慣があるからなんです。緑茶に含まれるカテキンには、がんの予防効果があるとされています。また、紅茶よりもビタミンCが多いので、胃がんにも効果的
-                    と言われています。焼く工程があるほうじ茶にするよりも、番茶や煎茶の方が茶成分が残りやすいので、おすすめの飲み方です。/p>
+                    と言われています。焼く工程があるほうじ茶にするよりも、番茶や煎茶の方が茶成分が残りやすいので、おすすめの飲み方です。</p>
                     
                     <div id="tea_image" class="center">
                         <img src="greentea.jpg" alt="緑茶の写真" title="緑茶" width="400" height="300">
