--- a/comment_stomach.html
+++ b/comment_stomach.html
@@ -49,12 +49,12 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> 胃もたれについて：緑茶中の有効成分カテキンは、がん患者さんの栄養療法において評価されていて、がんの発生や成長の抑制メカニズムに効果を発揮してくれます。
-
-                    カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
+                <p>  ほうじ茶とは、煎茶、番茶、茎茶を「焙（ほう）じた」お茶のことです。強火で焙じる（炒る）ことで茶葉の色が茶色くなります。苦味成分であるタンニンが緩和されるので、煎茶や番茶などのほかのお茶に比べて飲みやすく、すっきりとして香ばしい味わいになるのが特徴です。
+                    「胃がもたれる...」そんなときは温かいほうじ茶を淹れてみましょう。緑茶に比べて、カフェインが少ないので、胃を温め、休めることができます。
+                    さらに、ほうじ茶の香りには、「ピラジン」というリラックス効果もあります。ただしカフェインは含まれているので、飲むのは適量を心がけましょう。</p>
                     
                     <div id="tea_image" class="center">
-                        <img src="oolong.jpg" alt="ウーロン茶の写真" title="ウーロン茶" width="400" height="300">
+                        <img src="roasted.jpg" alt="ほうじ茶の写真" title="ほうじ茶" width="400" height="300">
                     </div>
             
             <div id= "btn_ok" class="of_course">OK</div>
