--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 
         <div id = "stomach_ans"class=result_stomach>
             <p>今日のティータイムにおすすめなお茶は...</p>
-            <div id="oolong" class="result core">           <p>ウーロン茶です！</p><br></div>
+            <div id="oolong" class="result core">           <p>ほうじ茶です！</p><br></div>
                 <div class="start">
                     <a href="./comment_stomach.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
