--- a/comment_flu.html
+++ b/comment_flu.html
@@ -49,9 +49,9 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> インフルについて：緑茶中の有効成分カテキンは、がん患者さんの栄養療法において評価されていて、がんの発生や成長の抑制メカニズムに効果を発揮してくれます。
-
-                    カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
+                <p> インフルエンザウイルスに対する有効成分としては緑茶に多く含まれる「カテキン」が有名ですね。ですが、紅茶として酸化発酵すると、この「カテキン」同士が結合し、新たなポリフェノール成分「テアフラビン」にパワーアップします。
+                    この「テアフラビン」はインフルエンザウイルスに有効な上、ウイルスのスパイクを捉える力がカテキンよりも強くなります！ただし、紅茶はイギリスやインドではミルクを加えるのが主流ですが、お茶のポリフェノール成分がミルクに含まれるタンパク質と結合しウイルスの感染力を奪う能力を低下させてしまうので、
+                    インフルエンザ対策として飲む場合は、牛乳や豆乳などのタンパク質を含むものよりも、レモン汁や生姜など身体を温める素材を入れると良いでしょう。</p>
                     
                     <div id="tea_image" class="center">
                         <img src="blacktea.jpg" alt="紅茶の写真" title="紅茶" width="600" height="300">
