--- a/comment_flu.html
+++ b/comment_flu.html
@@ -50,8 +50,8 @@
         <div id= "advice" class="check health">
             <div class="comment">
                 <p> インフルエンザウイルスに対する有効成分としては緑茶に多く含まれる「カテキン」が有名ですね。ですが、紅茶として酸化発酵すると、この「カテキン」同士が結合し、新たなポリフェノール成分「テアフラビン」にパワーアップします。
-                    この「テアフラビン」はインフルエンザウイルスに有効な上、ウイルスのスパイクを捉える力がカテキンよりも強くなります！ただし、紅茶はイギリスやインドではミルクを加えるのが主流ですが、お茶のポリフェノール成分がミルクに含まれるタンパク質と結合しウイルスの感染力を奪う能力を低下させてしまうので、
-                    インフルエンザ対策として飲む場合は、牛乳や豆乳などのタンパク質を含むものよりも、レモン汁や生姜など身体を温める素材を入れるとよりベターですよ♪</p>
+                    この「テアフラビン」はウイルスを捉える力がカテキンよりも強くなります！ただし、紅茶はイギリスやインドではミルクを加えるのが主流ですが、お茶のポリフェノール成分がミルクに含まれるタンパク質と結合しウイルスの感染力を奪う能力を低下させてしまうので、
+                    インフルエンザ対策として飲む場合は、レモン汁や生姜など身体を温める素材を入れるとよりベターですよ♪</p>
                     
                     <div id="tea_image" class="center">
                         <img src="blacktea.jpg" alt="紅茶の写真" title="紅茶" width="600" height="300">
