--- a/comment_tooth.html
+++ b/comment_tooth.html
@@ -49,12 +49,12 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> 歯周病について：緑茶中の有効成分カテキンは、がん患者さんの栄養療法において評価されていて、がんの発生や成長の抑制メカニズムに効果を発揮してくれます。
-
-                    カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
+                <p>緑茶やほうじ茶に含まれるカテキンには、歯周病を抑制する効果もあります！ですが、それよりも歯周病に効果的と言われているのが、ウーロン茶！
+                    抗菌作用のあるポリフェノールがたくさん含まれています。他にも、タンニンという成分が、歯周病菌が増殖するのを防ぐ効果がある、という実験結果もあるくらいなんです！両方のお茶には、フッ素も入っているので、
+                　　たくさんの効果が期待できますね！ポリフェノールの多い紅茶を飲むのも予防になりますよ♪</p>
                     
                     <div id="tea_image" class="center">
-                        <img src="roasted.jpg" alt="ほうじ茶の写真" title="ほうじ茶" width="400" height="300">
+                        <img src="oolong.jpg" alt="ウーロン茶の写真" title="ウーロン茶" width="400" height="300">
                     </div>
             
             <div id= "btn_ok" class="of_course">OK</div>
