--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
         <div id = "tooth_ans"class=result_tooth>
             <p>今日のティータイムにおすすめなお茶は...</p>
-            <div id="roasted" class="result core">           <p>ほうじ茶です！</p><br></div>
+            <div id="roasted" class="result core">           <p>ウーロン茶です！</p><br></div>
                 <div class="start">
                     <a href="./comment_tooth.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
