--- a/comment_tooth.html
+++ b/comment_tooth.html
@@ -50,8 +50,8 @@
         <div id= "advice" class="check health">
             <div class="comment">
                 <p>緑茶やほうじ茶に含まれるカテキンには、歯周病を抑制する効果もあります！ですが、それよりも歯周病に効果的と言われているのが、ウーロン茶！
-                    抗菌作用のあるポリフェノールがたくさん含まれています。他にも、タンニンという成分が、歯周病菌が増殖するのを防ぐ効果がある、という実験結果もあるくらいなんです！両方のお茶には、フッ素も入っているので、
-                　　たくさんの効果が期待できますね！ポリフェノールの多い紅茶を飲むのも予防になりますよ♪</p>
+                    抗菌作用のあるポリフェノールがたくさん含まれています。他にも、タンニンという成分が、歯周病菌が増殖するのを防ぐ効果がある、という実験結果もあるくらいなんです！
+                    両方のお茶には、フッ素も入っているので、たくさんの効果が期待できますね！ポリフェノールの多い紅茶を飲むのも予防になりますよ♪</p>
                     
                     <div id="tea_image" class="center">
                         <img src="oolong.jpg" alt="ウーロン茶の写真" title="ウーロン茶" width="400" height="300">
