--- a/comment_diabete.html
+++ b/comment_diabete.html
@@ -49,9 +49,9 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> 糖尿病について：緑茶中の有効成分カテキンは、がん患者さんの栄養療法において評価されていて、がんの発生や成長の抑制メカニズムに効果を発揮してくれます。
-
-                    カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
+                <p> 緑茶に含まれるカテキンには、食後の血糖値を抑えてくれる効果があります！　他にも、緑茶に含まれるカフェインは、基礎代謝の促進や筋肉の脂肪燃焼を促していると言われています。
+                    カテキンの抗酸化作用も、血糖値を下げる働きのあるインスリンの分泌を促進してくれます！緑茶を1日6杯以上飲む人では、ほとんど飲まない人(週1杯以下)と比べ、糖尿病の発症率が33％少なかった、という報告があるそうです。
+                    万能な緑茶を飲んで、健康を守りましょう♪</p>
                     
                     <div id="tea_image" class="center">
                         <img src="greentea.jpg" alt="緑茶の写真" title="緑茶" width="400" height="300">
