--- a/comment_aa.html
+++ b/comment_aa.html
@@ -49,9 +49,9 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> アンチエイジングの説明文：緑茶中の有効成分カテキンは、がん患者さんの栄養療法において評価されていて、がんの発生や成長の抑制メカニズムに効果を発揮してくれます。
-
-                    カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
+                <p> 緑茶のカテキンにも抗酸化作用は含まれていますが、カフェインを少しでも減らしたい！という方には、同じ抗酸化作用のあるルイボスティーをおすすめします！
+                    ルイボスティーは、南アフリカ生まれのお茶で、現地では「奇跡のお茶」と言われていたそうです♪ 高いアンチエイジング効果があり、糖化と酸化をWでブロックしてくれるので、
+                    「不老長寿のお茶」とも言われていたそうです...！他にも、「甜茶（てんちゃ）」やドクダミ茶にも強い抗酸化作用があると言われているので、飲んでみると良いかもですね♪</p>
                     
                     <div id="tea_image" class="center">
                         <img src="rooibos.jpg" alt="ルイボスティーの写真" title="ルイボスティー" width="400" height="300">
