--- a/comment_skin.html
+++ b/comment_skin.html
@@ -49,9 +49,9 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> 美肌について：緑茶中の有効成分カテキンは、がん患者さんの栄養療法において評価されていて、がんの発生や成長の抑制メカニズムに効果を発揮してくれます。
-
-                    カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
+                <p> ローズヒップティーには、美肌に必要なビタミン類がたくさん含まれています！なぜなら、写真のローズヒップ（バラの実）には、オレンジの20倍ものビタミンが含まれているから！
+                    収穫し、乾燥させてハーブティーにして飲むそうです。ビタミンEやポリフェノール、鉄分や食物繊維、カルシウムなども含まれている栄養抜群なお茶です。
+                    また、抗酸化作用もあります。他にも、はと麦茶、黒豆茶、プーアール茶、ジャスミン茶..などなど、お肌にいいお茶はたくさん。好みに合わせて、飲み比べてみてください♪</p>
                     
                     <div id="tea_image" class="center">
                         <img src="rosehip.jpg" alt="ローズヒップティーの写真" title="ローズヒップティー" width="400" height="300">
