--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 
         <div id = "swell_ans" class=result_swell>
             <p>今日のティータイムにおすすめなお茶は...</p>
-            <div id="hibiscus" class="result core">           <p>ハイビスカスティーです！</p><br></div>
+            <div id="hibiscus" class="result core">           <p>ルイボスティーです！</p><br></div>
                 <div class="start">
                     <a href="./comment_swell.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
