--- a/comment_swell.html
+++ b/comment_swell.html
@@ -49,9 +49,9 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> ルイボスティーとは、マメ科の葉っぱを使って作られるお茶です。体にうれしいノンカフェインでありながら、ミネラルを多く含み、リンパや血の流れを改善するため、体にたまった毒素が排出されやすくなり、むくみ改善につながります。
-                    血液の循環を促進し血流をよくしてくれるルチン、血流を促進してくれるフラボノイド、マグネシウムは入っていることも、むくみや冷え性の改善に効果があるとされています。
-                    これ以外にも、むくみに効くお茶は利尿作用のあるカフェインが入った緑茶やウーロン茶、ローズヒップティー、など、実にさまざま。自分の好みにあったお茶を見つけられると良いかもですね♪</p>
+                <p> ルイボスティーとは、マメ科の葉っぱを使って作られるお茶です。体にうれしいノンカフェインでありながら、ミネラル、血液の循環を促進し血流をよくしてくれるルチン、血流を促進してくれるフラボノイド、マグネシウムが入っていて、
+                    血行を改善し、体の毒素を排出してくれます。これ以外にも、むくみに効くお茶は利尿作用のあるカフェインが入っている緑茶やウーロン茶、ポリフェノールがたくさん含まれるローズヒップティー、など、実にさまざま。
+                    自分の好みにあったお茶を見つけられると良いかもですね♪</p>
                     
                     <div id="tea_image" class="center">
                         <img src="rooibos.jpg" alt="ルイボスティーの写真" title="ルイボスティー" width="400" height="300">
