--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 
         <div id = "hair_ans"class=result_hair>
             <p>今日のティータイムにおすすめなお茶は...</p>
-            <div id="herb" class="result core">           <p>ハーブティーです！</p><br></div>
+            <div id="herb" class="result core">           <p>カモミールティーです！</p><br></div>
                 <div class="start">
                     <a href="./comment_hair.html" class="btn_greentea_hbp">もっと詳しく</a>
                 </div>
