--- a/comment_hair.html
+++ b/comment_hair.html
@@ -51,9 +51,9 @@
             <div class="comment">
                 <p> 髪にいいお茶、というと、これまた色々なお茶が当てはまりそうですが、実はその中でも、カモミールティーの髪に対する効果がスゴイ！ことをご存知でしたか？
                     カモミールティーとは、薬草やハーブとして利用されていたカモミールの花を乾燥させて作ったハーブで入れるお茶です。髪に与える効果としては、まず、肌の乾燥の改善です。
-                    ですので、乾燥しがちな頭皮を改善することができ、フケが大量にでるなどの症状の改善にも効果的です。また髪への保湿効果による乾燥改善にも効果が期待できます。
-                    髪の乾燥によるハリの無さやパサついている髪に潤いを与えます。他にも、カモミールティーには胃の調子を整えるはたらきや、ホルモンバランスの乱れを調節する効能もあるので、
-                    髪に必要な栄養を行き渡らせたり、頭皮のニキビを予防する効果もあるんですね。リンスにも使われるくらい髪に優しいカモミールティー、よかったら飲んでみませんか♪</p>
+                    ですので、乾燥しがちな頭皮を改善することができ、フケが大量にでるなどの症状も防げます。また髪への保湿効果もあります。
+                    他にも、カモミールティーには胃の調子を整えるはたらきや、ホルモンバランスの乱れを調節する効能もあるので、髪に必要な栄養を行き渡らせたり、頭皮のニキビを予防する効果もあるんです！
+                    リンスにも使われるくらい髪に優しいカモミールティー、よかったら飲んでみませんか♪</p>
                     <div id="tea_image" class="center">
                         <img src="publicdomainq-0047788msz.jpg" alt="カモミールティーの写真" title="カモミールティー" width="400" height="300">
                     </div>
