--- a/comment_hair.html
+++ b/comment_hair.html
@@ -50,9 +50,8 @@
         <div id= "advice" class="check health">
             <div class="comment">
                 <p> 髪にいいお茶、というと、これまた色々なお茶が当てはまりそうですが、実はその中でも、カモミールティーの髪に対する効果がスゴイ！ことをご存知でしたか？
-                    カモミールティーとは、薬草やハーブとして利用されていたカモミールの花を乾燥させて作ったハーブで入れるお茶です。髪に与える効果としては、まず、肌の乾燥の改善です。
-                    ですので、乾燥しがちな頭皮を改善することができ、フケが大量にでるなどの症状も防げます。また髪への保湿効果もあります。
-                    他にも、カモミールティーには胃の調子を整えるはたらきや、ホルモンバランスの乱れを調節する効能もあるので、髪に必要な栄養を行き渡らせたり、頭皮のニキビを予防する効果もあるんです！
+                    カモミールティーとは、薬草やハーブとして利用されていたカモミールの花を乾燥させて作ったハーブで入れるお茶です。髪に与える効果としては、まず、肌あるいは頭皮の乾燥を防いでくれます。
+                    また髪への保湿効果もあります。他にも、カモミールティーには胃の調子を整えるはたらきや、ホルモンバランスの乱れを調節する効能もあるので、髪に必要な栄養を行き渡らせたり、頭皮のニキビを予防する効果もあるんです！
                     リンスにも使われるくらい髪に優しいカモミールティー、よかったら飲んでみませんか♪</p>
                     <div id="tea_image" class="center">
                         <img src="publicdomainq-0047788msz.jpg" alt="カモミールティーの写真" title="カモミールティー" width="400" height="300">
