--- a/comment_diet.html
+++ b/comment_diet.html
@@ -49,10 +49,9 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> ダイエットについて：緑茶中の有効成分カテキンは、がん患者さんの栄養療法において評価されていて、がんの発生や成長の抑制メカニズムに効果を発揮してくれます。
-
-                    カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
-                    
+                <p> 烏龍茶特有の「ウーロン茶ポリフェノール」には、脂質を分解・吸収する消化酵素「膵リパーゼ」の働きを抑制する作用があります。つまり、脂質は吸収されずに腸まで運ばれてそのまま排出されるので、脂肪が溜まりにくくなります。
+                烏龍茶に含まれるカフェインは、利尿作用があるので、体内の水分を排出してむくみを防止します。他には、「サポニン」と呼ばれる抗酸化作用のある成分が、食べたものの油分を分解するだけでなく、腸管にある脂質も分解してくれます。
+                    さらに、血液中のコレステロール値を下げたり、脂質の生成を抑えて肝機能の働きを良くしたりする働きもあるので、ダイエットに適してますね！食事中に飲むと、油の吸収を抑えてくれますよ♪</p>
                     <div id="tea_image" class="center">
                         <img src="oolong.jpg" alt="ウーロン茶の写真" title="ウーロン茶" width="400" height="300">
                     </div>
