--- a/comment_diet.html
+++ b/comment_diet.html
@@ -49,8 +49,8 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> 烏龍茶特有の「ウーロン茶ポリフェノール」には、脂質を分解・吸収する消化酵素「膵リパーゼ」の働きを抑制する作用があります。つまり、脂質は吸収されずに腸まで運ばれてそのまま排出されるので、脂肪が溜まりにくくなります。
-                烏龍茶に含まれるカフェインは、利尿作用があるので、体内の水分を排出してむくみを防止します。他には、「サポニン」と呼ばれる抗酸化作用のある成分が、食べたものの油分を分解するだけでなく、腸管にある脂質も分解してくれます。
+                <p> 烏龍茶特有のウーロン茶ポリフェノールには、脂質を吸収する消化酵素「膵リパーゼ」の働きを抑制する作用があります。つまり、脂質は吸収されずに腸まで運ばれてそのまま排出されるので、脂肪が溜まりにくくなります。
+                烏龍茶に含まれるカフェインは、利尿作用があるので、むくみを防止します。他には、抗酸化作用のある成分「サポニン」が、食べたものの油分や腸管にある脂質を分解してくれます。
                     さらに、血液中のコレステロール値を下げたり、脂質の生成を抑えて肝機能の働きを良くしたりする働きもあるので、ダイエットに適してますね！食事中に飲むと、油の吸収を抑えてくれますよ♪</p>
                     <div id="tea_image" class="center">
                         <img src="oolong.jpg" alt="ウーロン茶の写真" title="ウーロン茶" width="400" height="300">
