--- a/comment_whitening.html
+++ b/comment_whitening.html
@@ -49,9 +49,9 @@
 
         <div id= "advice" class="check health">
             <div class="comment">
-                <p> 美白の説明文：緑茶中の有効成分カテキンは、がん患者さんの栄養療法において評価されていて、がんの発生や成長の抑制メカニズムに効果を発揮してくれます。
-
-                    カテキンのがん抑制メカニズムは、発がんの抑制や、がん成長促進の抑制、がん細胞自滅死の促進などなどです。中国緑茶よりもカテキンの含有量が高い日本緑茶で、健康を守りましょう♪</p>
+                <p> やっぱり緑茶はお茶の中でもビタミンＣが多いお茶です。ビタミンＣはメラニン色素の原因になる働きを抑える効果があります。熱に強いので、熱いお水で淹れても分解されません。
+                    緑茶3杯でリンゴ1個分のビタミンCが入っているので、お手軽にビタミンCを取れます！カテキンにも同じくシミやそばかすを防ぐ効果があります。日々の生活に緑茶を取り入れて、
+                    ビタミンCを効果的に摂っていきましょう♪</p>
                     
                     <div id="tea_image" class="center">
                         <img src="greentea.jpg" alt="緑茶の写真" title="緑茶" width="400" height="300">
